Fix minimal layout issues

--- a/front-end/sass/themes/basic-dark.sass
+++ b/front-end/sass/themes/basic-dark.sass
@@ -56,8 +56,7 @@ $border-bottom: 3px
     .status__detail-title
         // pimary title
 
-    .status__detail-stages,
-    .status__detail-jobs
+    .status__detail-stages
         margin-top: 10px
 
     .status__detail-stage,
