--- a/front-end/sass/themes/material-design.sass
+++ b/front-end/sass/themes/material-design.sass
@@ -22,7 +22,7 @@ $top-bar-height: 34px
 
         &::after
             position: absolute
-            left: 15px
+            left: 20px
             top: 3px
             font-size: 24px
             font:
@@ -94,8 +94,7 @@ $top-bar-height: 34px
     .status__detail-title
         // pimary title
 
-    .status__detail-stages,
-    .status__detail-jobs
+    .status__detail-stages
         margin-top: 10px
 
     .status__detail-stage,
@@ -140,7 +139,7 @@ $top-bar-height: 34px
 
     .status__time-ago
         position: absolute
-        right: 15px
+        right: 20px
         top: 3px
 
         &::before
